fix v-select dark mode input text issue

--- a/src/design/styles/vue-select.sass
+++ b/src/design/styles/vue-select.sass
@@ -12,3 +12,6 @@
 .dark-mode .vs__clear,
 .dark-mode .vs__open-indicator
   fill: #eee
+
+.dark-mode #vs1__combobox > div.vs__selected-options > input
+  color: #eee
